Changes from meeting

--- a/01-organisation.html
+++ b/01-organisation.html
@@ -116,12 +116,12 @@
 						</li>
 					</ul>
 				</div>
-				<div class="activity">
+				<!--<div class="activity">
 					<h3>Recently submitted application</h3>
 					<strong>RePL Application</strong><br>
 					<a href="#" class=" ">02 Aug 18 Download RePL Application (PDF | 32kB) </a>
 					<p>&nbsp;</p>
-				</div>
+				</div>-->
 				<h3>Application</h3>
 				<div id="link-deactive">
 					Remote Pilot Licence (RePL)
