--- a/03-paymentsummary.html
+++ b/03-paymentsummary.html
@@ -154,7 +154,8 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-8"><br>
-			<a href="04-payment.html" class="au-btn" id="summary">Proceed to Westpac Payment</a>
+			<a href="04-payment.html" class="au-btn" id="summary">Proceed to Payment</a>
+			<p>You will be directed to Westpac for payment</p>
 			<div class="save-exit">
 			<a href="01-organisation.html#id-progress" class="au-btn au-btn--secondary">
 			Save and exit
