--- a/04-payment-confirmation.html
+++ b/04-payment-confirmation.html
@@ -88,10 +88,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8"><br>
-				<p>Civil Aviation Safety Authority Copyright 2018, All rights Reserved
-					<span class="float-right"><img src="img/westpac-logo.png" width="80px" alt=""></span>
-					<p>
-
+				<p class="float-left">Civil Aviation Safety Authority Copyright 2018, All rights Reserved<p>
+				<span class="float-right"><img src="img/westpac-logo.png" width="80px" alt=""></span>
 			</div>
 			<div class="col-md-4">
 
