--- a/04-payment.html
+++ b/04-payment.html
@@ -22,10 +22,8 @@
 	          <img class="au-header__brand-image" alt="westpac" src="img/westpac-logo.png">
 	        </a>
 	      </div>
-
 	    </div>
 	  </div>
-
 	</header>
 
 <main id="main-content">
@@ -45,7 +43,7 @@
 </section>-->
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6"><br>
+			<div class="col-md-8"><br>
 					<h2 class="au-display-lg">Payment Details</h2>
 					<p>
 						<strong>Reference Number</strong><br>
@@ -68,7 +66,7 @@
 					<div class="form-section">
 					<label for="text-input-block">Creditcard number</label>
 					<input class="au-text-input au-text-input--block" name="text-input-block" id="text-input-block" type="text" value="" style="width:70%!important;float:left;">
-					<img src="img/cardType.jpg" alt="" width="120px" style="float:left; margin-top:-.3rem;padding-left:1rem;"/>
+					<img src="img/cardType.jpg" alt="" width="100px" style="float:left; margin-top:-.3rem;padding-left:1rem;"/>
 					</div>
 
 					<div class="form-section">
@@ -107,10 +105,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8"><br>
-				<p>Civil Aviation Safety Authority Copyright 2018, All rights Reserved
-					<span class="float-right"><img src="img/westpac-logo.png" width="80px" alt=""></span>
-					<p>
-
+				<p class="float-left">Civil Aviation Safety Authority Copyright 2018, All rights Reserved<p>
+				<span class="float-right"><img src="img/Westpac-logo.png" width="80px" alt=""></span>
 			</div>
 			<div class="col-md-4">
 
