--- a/submitted-applications.html
+++ b/submitted-applications.html
@@ -65,7 +65,7 @@
 					<a class="au-direction-link au-direction-link--left" href="javascript:history.back()">Back</a>
 
 					<h3 class="au-display-md">Showing 10 of 50 applications</h3><br>
-					<form role="search" class="au-search row" method="get" action="">
+					<!--<form role="search" class="au-search row" method="get" action="">
 						<label class="sr-only" for="s1">Search</label>
 						<div class="col-lg-8 col-xs-8">
 						<input type="search" class="au-text-input " name="s" id="s1">
@@ -73,7 +73,7 @@
 						<div class="col-lg-4 col-xs-4">
 							<button class="au-btn au-stretch_row">Search Application</button>
 						</div>
-					</form><p>&nbsp;</p>
+					</form><p>&nbsp;</p>-->
 					<ul class="list-unstyled">
 						<li class="row">
 							<div class="col-md-8"><a href="#" class=" ">09 Aug 18 Download RePL Application (PDF | 32kB) </a>
