--- a/02-student.html
+++ b/02-student.html
@@ -64,14 +64,19 @@
 				</div>
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="no-arn">
 					<h3>100 points of identification required</h3>
-					<p>This student has not completed 100 points of identification for their ARN and cannot be issued a RePL.</p>
+					<p>This student has not completed 100 points of identification for their ARN and cannot be issued a RePL. An email notice has been sent to the student.</p>
 				</div>
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="existing-arn">
-					<h3>This student already has an existing RePL</h3>
+					<h3>This student already has an existing RePL with a:</h3>
+					<ul>
+						<li>Category - Multi rotor</li>
+						<li>Weight - Class 2kg to 25kg</li>
+						<li>Type - Small</li>
+					</ul>
 				</div>
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="suspension">
-					<h3>Suspension</h3>
-					<p>This student has a suspension on their ARN. They will not be able to receive a RePL, please inform the student. An email has also been sent to the student about their suspension and RePL.</p>
+					<h3>Studen has a suspension on their ARN</h3>
+					<!--<p>This student has a suspension on their ARN. They will not be able to receive a RePL, please inform the student. An email has also been sent to the student about their suspension and RePL.</p>-->
 				</div>
 					<h2 class="au-display-xl m-t-2">Remote Pilot Licence (RePL)</h2>
 					<a class="au-direction-link au-direction-link--left" href="javascript:history.back()">Back</a>
@@ -231,7 +236,7 @@
 		$('test').hide();
 		//alert(val1);
 
-		if(val1 == "" || val2 == ""){
+		if(val1 == "" || val2 == "" || val1 !== "Smith" || val1 !== "Williams"){
 		//alert (timesClicked);
 			$('#error').show();
 			$('#save, #finalise-error, .test, #no-arn, #suspension, #existing-arn').hide();
@@ -272,7 +277,7 @@
 			}
 	}
 			if(val1 == "Wilson"){
-				$('#error, #finalise-error').hide();
+				$('#error, #finalise-error, #existing-arn, #suspension').hide();
 				$('#save').hide();
 				$("#arn-input, #surname-input").removeClass('form-error');
 				$('#no-arn').show();
@@ -284,7 +289,7 @@
 				$('#suspension').show();
 			}
 			if(val1 == "Johnson"){
-				$('#error, #no-arn, #finalise-error').hide();
+				$('#error, #no-arn, #finalise-error, #suspension, #surname-error, #arn-error').hide();
 				$('#save').hide();
 				$("#arn-input, #surname-input").removeClass('form-error');
 				$('#existing-arn').show();
