--- a/04-payment.html
+++ b/04-payment.html
@@ -19,7 +19,7 @@
 	    <div class="row">
 	      <div class="col-md-9 col-xs-7">
 	        <a class="au-header__brand" href="">
-	          <img class="au-header__brand-image" alt="westpac" src="img/westpac-logo.png">
+	          <img class="au-header__brand-image" alt="westpac" src="img/Westpac-logo.png">
 	        </a>
 	      </div>
 	    </div>
