--- a/03-paymentsummary.html
+++ b/03-paymentsummary.html
@@ -101,7 +101,7 @@
 									</li>
 									<li>
 										<div class="student">
-											<span class="student-name">Peter Smith</span>
+											<span class="student-name">1. Peter Smith</span>
 										</div>
 										<div class="edit">
 											<span class="student-arn">123 4568</span>
@@ -118,7 +118,7 @@
 									</li>
 									<li>
 										<div class="student">
-											<span class="student-name">AVA Williams</span>
+											<span class="student-name">2. AVA Williams</span>
 										</div>
 										<div class="edit">
 											<span class="student-arn">223 4568</span>
