Existing Licence  status on Peter Smith

--- a/03-paymentsummary.html
+++ b/03-paymentsummary.html
@@ -105,6 +105,7 @@
 									<li id="peter">
 										<div class="student">
 											<span class="student-name">1. Peter Smith</span>
+											<span class="badge badge-info">Existing RePL - Aeroplane, 25kg to 150kg, Medium</span>
 										</div>
 										<div class="edit">
 											<span class="student-arn">123 4568</span>
