--- a/02-student.html
+++ b/02-student.html
@@ -80,7 +80,7 @@
 				</div>
 					<h2 class="au-display-xl m-t-2">Remote Pilot Licence (RePL)</h2>
 					<a class="au-direction-link au-direction-link--left" href="javascript:history.back()">Back</a>
-<p class="au-callout">Maximum of 10 students entries allowed</p>
+<p class="au-callout">Maximum of 10 student entries allowed</p>
 					<div class="row student-details">
 						<ul class="col-md-12 grid">
 							<li class="bg-dark">
@@ -94,6 +94,7 @@
 							<li class="hidden" id="peter">
 								<div class="student">
 									<span class="student-name">1. Peter Smith</span>
+									<span class="badge badge-info">Existing RePL - Aeroplane, 25kg to 150kg, Medium</span>
 								</div>
 								<div class="edit">
 									<span class="student-arn">123 4568</span>
