--- a/02-student.html
+++ b/02-student.html
@@ -75,7 +75,7 @@
 					</ul>
 				</div>
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="suspension">
-					<h3>Studen has a suspension on their ARN</h3>
+					<h3>Student has a suspension on their ARN</h3>
 					<!--<p>This student has a suspension on their ARN. They will not be able to receive a RePL, please inform the student. An email has also been sent to the student about their suspension and RePL.</p>-->
 				</div>
 					<h2 class="au-display-xl m-t-2">Remote Pilot Licence (RePL)</h2>
