--- a/04-payment-confirmation.html
+++ b/04-payment-confirmation.html
@@ -12,7 +12,13 @@
 	<!--<link rel="stylesheet" href="css/lead.css">-->
 	<link rel="stylesheet" href="css/main.css">
 </head>
-
+<style>
+* {
+	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+	filter: grayscale(100%);
+}
+img {filter: brightness(0) invert(1);}
+</style>
 <body class="live-demo au-body au-grid js westpac">
 	<header class="au-header logo" role="banner">
 	  <div class="container">
