--- a/01-organisation.html
+++ b/01-organisation.html
@@ -90,7 +90,7 @@
 						<li class="row in-progress">
 							<div class="col-md-8 col-xs-8"><a href="02-course-details.html" class=" ">02 Aug 18 - Remote Pilot Licence (RePL)</a>
 							<br>
-							<span class="form-text">Multi Rotor 2kg to 25kg</span>
+							<span class="form-text">Multi Rotor Up to 150kg Medium</span>
 							</div>
 							<div class="col-md-4 col-xs-4">
 								<a href="#" class="btn-delete padding-0" data-toggle="modal" data-target="#delete-modal-app"><span class="fas fa-minus-circle"></span> Delete <span class="sr-only">RePL application</span></a>
@@ -99,7 +99,7 @@
 						<li class="row alt-row">
 							<div class="col-md-8 col-xs-8"><a href="#" class=" ">02 Aug 18 Remote Pilot Licence (RePL)</a>
 								<br>
-								<span class="form-text">Multi Rotor 25kg to 150kg</span>
+								<span class="form-text">Multi Rotor Up to 25kg</span>
 							</div>
 							<div class="col-md-4 col-xs-4">
 								<a href="#" class="btn-delete padding-0" data-toggle="modal" data-target="#delete-modal-app"><span class="fas fa-minus-circle"></span> Delete <span class="sr-only">RePL application</span></a>
@@ -108,7 +108,7 @@
 						<li class="row">
 							<div class="col-md-8 col-xs-8"><a href="#" class=" ">28th Jul 18 RePL Remote Pilot Licence (RePL)</a>
 							<br>
-							<span class="form-text">Multi Rotor 25kg to 150kg</span>
+							<span class="form-text">Multi Rotor Up to 150kg</span>
 							</div>
 							<div class="col-md-4 col-xs-4">
 								<a href="#" class="btn-delete padding-0" data-toggle="modal" data-target="#delete-modal-app"><span class="fas fa-minus-circle"></span> Delete <span class="sr-only">RePL application</span></a>
