--- a/02-course-details.html
+++ b/02-course-details.html
@@ -52,17 +52,17 @@
 <main id="main-content">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-6 col-md-12"><br>
+			<div class="col-lg-6 col-md-12">
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="error">
 					<span>Please complete the Remotely Piloted Aircraft details</span>
 				</div>
 					<h2 class="au-display-xl m-t-2">Remote Pilot Licence (RePL)</h2>
 					<a class="au-direction-link au-direction-link--left" href="javascript:history.back()">Back</a>
 
-					<h3 class="label m-t-2">RePL Training</h3>
-					 <div class="form-section">
+					<!--<h3 class="label m-t-2">RePL Training</h3>-->
+					 <!--<div class="form-section">-->
 						 <!--Theory and Operational-->
-						 <label class="au-control-input">
+						 <!--<label class="au-control-input">
 							  <input class="au-control-input__input" type="radio" name="radio-ex">
 							  <span class="au-control-input__text">Both Theory and Operational</span>
 							</label><br>
@@ -70,7 +70,7 @@
 							  <input class="au-control-input__input" type="radio" name="radio-ex">
 							  <span class="au-control-input__text">Only Operational</span>
 							</label>
-						</div>
+						</div>-->
 					<!--<div class="form-section">
 						<label for="text-input">Course Number</label>
 						<input class="au-text-input" name="text-input" id="text-input" type="text">
@@ -93,9 +93,10 @@
 								<label for="weight">Weight class</label>
 								<select id="weight" class="au-select au-select--block">
 									<option value="1" selected="selected">Please select</option>
-									<option value="2">2kg up to 25kg</option>
-									<option value="3">25kg up to 150kg</option>
-									<option value="3">Greater than 150kg</option>
+									<option value="2">Up to 7kg</option>
+									<option value="2">Up to 25kg</option>
+									<option value="3">Up to 150kg</option>
+
 								</select>
 							</div>
 							<div class="form-section">
@@ -104,6 +105,7 @@
 									<option value="1" selected="selected">Please select</option>
 									<option value="2">Small</option>
 									<option value="3">Medium</option>
+									<option value="3">Large</option>
 								</select>
 							</div>
 							<p>&nbsp;</p>
@@ -145,6 +147,18 @@
 			});
 		}
 	});*/
+	$('#type').parent().addClass('hidden');
+	$('#weight').on('change', function() {
+		var w = document.getElementById("weight");
+		var wVal = w.options[w.selectedIndex].value;
+		if (wVal == 3){
+			$('#type').parent().removeClass('hidden');
+		}
+		else {
+			$('#type').parent().addClass('hidden');
+		}
+	});
+
 	$('#next').click(function(){
 		var c = document.getElementById("category");
 		var cVal = c.options[c.selectedIndex].value;
@@ -152,6 +166,7 @@
 		var wVal = w.options[w.selectedIndex].value;
 		var t = document.getElementById("type");
 		var tVal = t.options[t.selectedIndex].value;
+    var tVisible = $('#type').parent().hasClass('hidden');
 
 			if(cVal == 1){
 				$("#error").show();
@@ -167,14 +182,14 @@
   					$("#weight").removeClass('form-error');
 				});
 			}
-			if(tVal == 1){
+			if(tVisible && tVal == 1){
 				$("#error").show();
 				$("#type").addClass('form-error');
 				$('#type').on('change', function() {
   					$("#type").removeClass('form-error');
 				});
 			}
-			if (cVal > 1 && wVal > 1 && tVal > 1) {
+			if (cVal > 1 && wVal > 1 /*&& tVal > 1*/) {
 				//$("#error").hide();
 				return true;
 			}
