--- a/02-student.html
+++ b/02-student.html
@@ -66,21 +66,21 @@
 					<h3>100 points of identification required</h3>
 					<p>This student has not completed 100 points of identification for their ARN and cannot be issued a RePL. An email notice has been sent to the student.</p>
 				</div>
-				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="existing-arn">
+				<!--<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="existing-arn">
 					<h3>This student already has an existing RePL with a:</h3>
 					<ul>
 						<li>Category - Multi rotor</li>
 						<li>Weight - Class 2kg to 25kg</li>
 						<li>Type - Small</li>
 					</ul>
-				</div>
+				</div>-->
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="suspension">
 					<h3>Student has a suspension on their ARN</h3>
 					<!--<p>This student has a suspension on their ARN. They will not be able to receive a RePL, please inform the student. An email has also been sent to the student about their suspension and RePL.</p>-->
 				</div>
 					<h2 class="au-display-xl m-t-2">Remote Pilot Licence (RePL)</h2>
 					<a class="au-direction-link au-direction-link--left" href="javascript:history.back()">Back</a>
-<p class="au-callout">Maximum of 10 student entries allowed</p>
+<!--<p class="au-callout">Maximum of 10 student entries allowed</p>-->
 					<div class="row student-details">
 						<ul class="col-md-12 grid">
 							<li class="bg-dark">
@@ -94,13 +94,13 @@
 							<li class="hidden" id="peter">
 								<div class="student">
 									<span class="student-name">1. Peter Smith</span>
-									<span class="badge badge-info">Existing RePL - Aeroplane, 25kg to 150kg, Medium</span>
+									<!--<span class="badge badge-info">Variation</span>-->
 								</div>
 								<div class="edit">
 									<span class="student-arn">123 4568</span>
 								</div>
-								<div class="delete">
-									<a href="#" class="btn-delete"  data-toggle="modal" data-target="#deletePilot">
+								<div class="delete-repl">
+									<a href="#" class="btn-delete"  style="padding-left:1rem"  data-toggle="modal" data-target="#deletePilot">
 									  <span class="fas fa-minus-circle"></span> Delete
 									</a>
 								</div>
@@ -112,8 +112,8 @@
 								<div class="edit">
 									<span class="student-arn">223 4568</span>
 								</div>
-								<div class="delete">
-									<a href="#" class="btn-delete"  data-toggle="modal" data-target="#deletePilot-ava">
+								<div class="delete-repl">
+									<a href="#" class="btn-delete" style="padding-left:1rem" data-toggle="modal" data-target="#deletePilot-ava">
 									  <span class="fas fa-minus-circle"></span> Delete
 									</a>
 								</div>
@@ -251,7 +251,7 @@
 				$(this).parent().find('span').remove();
 			});
 		}
-		if (val1 == "Smith" || val1 == "Williams"){
+		if (val1 == "Smith" || val1 == "Williams" || val1 == "smith" || val1 == "williams"){
 			var classPeter = $("#peter").hasClass("hidden");
 			var classAva = $("#ava").hasClass("hidden");
 			if(classPeter){
@@ -282,19 +282,21 @@
 				$('#save').hide();
 				$("#arn-input, #surname-input").removeClass('form-error');
 				$('#no-arn').show();
+				window.scrollTo(0, 0);
 			}
 			if(val1 == "Brown"){
 				$('#error, #no-arn, #finalise-error, #existing-arn').hide();
 				$('#save').hide();
 				$("#arn-input, #surname-input").removeClass('form-error');
 				$('#suspension').show();
+				window.scrollTo(0, 0);
 			}
-			if(val1 == "Johnson"){
+			/*if(val1 == "Johnson"){
 				$('#error, #no-arn, #finalise-error, #suspension, #surname-error, #arn-error').hide();
 				$('#save').hide();
 				$("#arn-input, #surname-input").removeClass('form-error');
 				$('#existing-arn').show();
-			}
+			}*/
 	});
 	$('#finalise').click(function(){
 		var classPeter = $("#peter").hasClass("hidden");
