--- a/03-paymentsummary.html
+++ b/03-paymentsummary.html
@@ -73,7 +73,7 @@
 </section>-->
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-8 col-md-12"><br>
+			<div class="col-lg-8 col-md-12">
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="finalise-error">
 					<h3>Please add a student</h3>
 				</div>
@@ -84,62 +84,85 @@
 					<a class="au-direction-link au-direction-link--left" href="javascript:history.back()">Back</a>
 					<h3>Application Summary</h3>
 						<br>
-						<strong>RePL Training:</strong>Theory and Operational<br>
+						<!--<strong>RePL Training:</strong>Theory and Operational<br>-->
 						<strong>Category:</strong> Multi Rotor<br>
-						<strong>Weight class: </strong>2kg up to 25kg
-						<br><br>
-						<div id="summary-price"><strong>Remote Pilot Licence x2</strong><br>
+						<strong>Weight class: </strong>Up to 150kg<br>
+						<strong>Type: </strong>Medium
+						<br>
+						<!--<div id="summary-price"><strong>Remote Pilot Licence <span class="num-pilot">x2</span></strong><br>
 						<strong>Payment Total: <span class="price">$80.00</span></strong>
-					</div>
-						<div class="student-details">
+					</div>-->
+
 							<div class="student-details">
 								<ul class="grid">
-									<li>
-										<div class="student">
+									<li class="hidden-sm-down">
+										<div class="col-md-3 col-xs-12">
 											<strong>Name</strong>
 										</div>
-											<div class="edit">
+											<div class="col-md-3 col-xs-12">
 												<strong>ARN</strong>
+											</div>
+											<div class="col-md-3 col-xs-12 text-right p-r-1">
+												<strong>Fee</strong>
 											</div>
 									</li>
 									<li id="peter">
-										<div class="student">
+										<div class="col-md-3 col-xs-12">
 											<span class="student-name">1. Peter Smith</span>
-											<span class="badge badge-info">Existing RePL - Aeroplane, 25kg to 150kg, Medium</span>
+											<!--<span class="badge badge-info">Existing RePL - Aeroplane, 25kg to 150kg, Medium</span>-->
 										</div>
-										<div class="edit">
-											<span class="student-arn">123 4568</span>
+										<div class="col-md-3 col-xs-4 mobile-margin">
+											<span class="student-arn ">123 4568</span>
 											<!--<a href="#" class="btn-edit">
 												<span class="fas fa-pencil-alt"></span> Edit
 											</a>-->
 										</div>
-										<div class="delete">
+										<div class="col-md-3 col-xs-12 text-right p-r-1 payment">
+											Variation $25
+										</div>
+										<div class="delete col-md-3 col-xs-12">
 											<a href="#" class="btn-delete"  data-toggle="modal" data-target="#deletePilot">
 											  <span class="fas fa-minus-circle"></span> Delete
 											</a>
 										</div>
-
 									</li>
 									<li id="ava">
-										<div class="student">
+										<div class="col-md-3 col-xs-12">
 											<span class="student-name">2. AVA Williams</span>
 										</div>
-										<div class="edit">
+										<div class="col-md-3 col-xs-4 mobile-margin">
 											<span class="student-arn">223 4568</span>
 											<!--<a href="#" class="btn-edit">
 												<span class="fas fa-pencil-alt"></span> Edit
 											</a>-->
 										</div>
-										<div class="delete">
+										<div class="col-md-3 col-xs-12 text-right p-r-1 payment">
+											Inital Issue $40
+										</div>
+										<div class="delete col-md-3 col-xs-12">
 											<a href="#" class="btn-delete"  data-toggle="modal" data-target="#deletePilot-ava">
 											  <span class="fas fa-minus-circle"></span> Delete
 											</a>
 										</div>
 
 									</li>
+									<li id="ava">
+										<div class="col-md-3 col-xs-12">
 
+										</div>
+										<div class="col-md-3 col-xs-4">
+											<strong></strong>
+										</div>
+										<div class="col-md-3 col-xs-4 text-right p-r-1 payment hidden-sm-down">
+											Total: $65
+										</div>
+										<div class="delete hidden-md-up payment-total text-right">
+												Total: $65
+										</div>
+
+									</li>
 								</ul>
-						</div>
+
 
 					<!--<p><a href="01-organisation.html" class="au-direction-link">Go to Bob's Flying School</a></p>-->
 		</div>
@@ -238,13 +261,14 @@
 	$('#delete-yes').click(function(){
 		if($('#peter').hasClass('hidden')){
 			$('#peter').removeClass('hidden');
-			$('.price').text('$40.00');
+
 
 		}
 		else {
 				$('#peter').addClass('hidden');
 				$('#save').hide();
 				$('#ava').find('.student-name').text('1. Ava Williams');
+
 		}
 		if ($('#ava').hasClass('hidden') && $('#peter').hasClass('hidden')){
 			$('.grid').addClass("hidden");
