--- a/04-payment.html
+++ b/04-payment.html
@@ -89,12 +89,23 @@ img {filter: brightness(0) invert(1);}
 					</div>
 					</div>
 					</div>
+
 					<div class="form-section">
 					<div class="date date-year">
 						<label for="text-input-block3">CVV</label>
 						<input class="au-text-input au-text-input--block" name="text-input-block" id="text-input-block3" type="text" value="" style="width:25%!important;">
 					</div>
 				 </div>
+
+
+				 <!--<div class="form-section">
+					 <hr>
+					 <label class="au-control-input">
+						  <input class="au-control-input__input" type="checkbox" name="checkbox-ex" checked>
+						  <span class="au-control-input__text p-t-0" style="margin-top:-1rem;">Save this credit card for future payments.</span>
+						</label>
+				 </div>-->
+<p>&nbsp;</p>
 			 </div>
 		</div>
 	</div>
