--- a/02-student.html
+++ b/02-student.html
@@ -64,10 +64,11 @@
 				</div>
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="no-arn">
 					<h3>100 points of identification required</h3>
-					<p>This student has not completed 100 points of identification for their ARN and cannot be issued a RePL. An email notice has been sent to the student.</p>
+					<p>This student has not completed 100 points of identification for their ARN and cannot be issued a RePL at this time. Call us on 131 757 or contact us via our <a href="https://www.casa.gov.au/aircraft/webform/remotely-piloted-aircraft-operational-enquiries">online enquiry form</a>, for further information.</p>
 				</div>
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="existing-arn">
-					<h3>This student already has an existing RePL with the same category &amp; weight class.</h3>
+					<h3>Existing RePL with the same category &amp; weight class.</h3>
+					<p>Call us on 131 757 or contact us via our <a href="https://www.casa.gov.au/aircraft/webform/remotely-piloted-aircraft-operational-enquiries">online enquiry form</a>, for further information.</p>
 				</div>
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="suspension">
 					<h3>Unsuccessful adding student</h3>
