--- a/student-max-entries.html
+++ b/student-max-entries.html
@@ -44,8 +44,8 @@
 			    <li><a href="01-organisation.html">Bob's Flying School</a></li>
 					<li>Remote Pilot Licence (RePL)</li>
 			  </ul>
-			</nav>
-		</div>
+				</nav>
+				</div>
 	</div>
 		</div>
 <main id="main-content">
@@ -74,14 +74,11 @@
 					<h3>Unable to add student</h3>
 					<p>Call us on 131 757 or contact us via our <a href="https://www.casa.gov.au/aircraft/webform/remotely-piloted-aircraft-operational-enquiries">online enquiry form</a>, for further information.</p>
 				</div>
-				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="existing-list">
-					<h3>Student is already on the list</h3>
-				</div>
 					<h2 class="au-display-xl m-t-2">Remote Pilot Licence (RePL)</h2>
 					<a class="au-direction-link au-direction-link--left" href="javascript:history.back()">Back</a>
 <!--<p class="au-callout">Maximum of 10 student entries allowed</p>-->
 					<div class="row student-details">
-						<ul class="col-md-12 grid">
+						<ul class="col-md-12 grid" style="margin-bottom:1rem;">
 							<li class="bg-dark">
 								<div class="student">
 									<strong>Name</strong>
@@ -90,7 +87,7 @@
 										<strong>ARN</strong>
 									</div>
 							</li>
-							<li class="hidden" id="peter">
+							<li>
 								<div class="student">
 									<span class="student-name">1. Peter Smith</span>
 									<!--<span class="badge badge-info">Variation</span>-->
@@ -104,7 +101,7 @@
 									</a>
 								</div>
 							</li>
-							<li class="hidden" id="ava">
+							<li>
 								<div class="student">
 									<span class="student-name">2. Ava Williams</span>
 								</div>
@@ -117,28 +114,114 @@
 									</a>
 								</div>
 							</li>
+							<li>
+								<div class="student">
+									<span class="student-name">3. John Smith</span>
+								</div>
+								<div class="edit">
+									<span class="student-arn">333 4568</span>
+								</div>
+								<div class="delete-repl">
+									<a href="#" class="btn-delete" style="padding-left:1rem" data-toggle="modal" data-target="#deletePilot-ava">
+									  <span class="fas fa-minus-circle"></span> Delete
+									</a>
+								</div>
+							</li>
+							<li>
+								<div class="student">
+									<span class="student-name">4. Robert Peterson</span>
+								</div>
+								<div class="edit">
+									<span class="student-arn">113 4568</span>
+								</div>
+								<div class="delete-repl">
+									<a href="#" class="btn-delete" style="padding-left:1rem" data-toggle="modal" data-target="#deletePilot-ava">
+									  <span class="fas fa-minus-circle"></span> Delete
+									</a>
+								</div>
+							</li>
+							<li>
+								<div class="student">
+									<span class="student-name">5. Hope Williams</span>
+								</div>
+								<div class="edit">
+									<span class="student-arn">443 4568</span>
+								</div>
+								<div class="delete-repl">
+									<a href="#" class="btn-delete" style="padding-left:1rem" data-toggle="modal" data-target="#deletePilot-ava">
+									  <span class="fas fa-minus-circle"></span> Delete
+									</a>
+								</div>
+							</li>
+							<li>
+								<div class="student">
+									<span class="student-name">6. Julie Smith</span>
+								</div>
+								<div class="edit">
+									<span class="student-arn">553 4568</span>
+								</div>
+								<div class="delete-repl">
+									<a href="#" class="btn-delete" style="padding-left:1rem" data-toggle="modal" data-target="#deletePilot-ava">
+									  <span class="fas fa-minus-circle"></span> Delete
+									</a>
+								</div>
+							</li>
+							<li>
+								<div class="student">
+									<span class="student-name">7. Ken Hemingway</span>
+								</div>
+								<div class="edit">
+									<span class="student-arn">663 4568</span>
+								</div>
+								<div class="delete-repl">
+									<a href="#" class="btn-delete" style="padding-left:1rem" data-toggle="modal" data-target="#deletePilot-ava">
+									  <span class="fas fa-minus-circle"></span> Delete
+									</a>
+								</div>
+							</li>
+							<li>
+								<div class="student">
+									<span class="student-name">8. Steve Hemingway</span>
+								</div>
+								<div class="edit">
+									<span class="student-arn">773 4568</span>
+								</div>
+								<div class="delete-repl">
+									<a href="#" class="btn-delete" style="padding-left:1rem" data-toggle="modal" data-target="#deletePilot-ava">
+									  <span class="fas fa-minus-circle"></span> Delete
+									</a>
+								</div>
+							</li>
+							<li>
+								<div class="student">
+									<span class="student-name">9. Mary Smith</span>
+								</div>
+								<div class="edit">
+									<span class="student-arn">883 4568</span>
+								</div>
+								<div class="delete-repl">
+									<a href="#" class="btn-delete" style="padding-left:1rem" data-toggle="modal" data-target="#deletePilot-ava">
+									  <span class="fas fa-minus-circle"></span> Delete
+									</a>
+								</div>
+							</li>
+							<li>
+								<div class="student">
+									<span class="student-name">10. Kate Smith</span>
+								</div>
+								<div class="edit">
+									<span class="student-arn">993 4568</span>
+								</div>
+								<div class="delete-repl">
+									<a href="#" class="btn-delete" style="padding-left:1rem" data-toggle="modal" data-target="#deletePilot-ava">
+									  <span class="fas fa-minus-circle"></span> Delete
+									</a>
+								</div>
+							</li>
 						</ul>
 					</div>
-					<h3>Add Students</h3>
-					<section class="row arn-details">
-					<div class="form-section col-md-12">
-						<label for="surname-input">Family Name</label>
-						<span id="surname-error" style="color:#d82c52;"></span>
-						<input class="au-text-input" name="text-input" id="surname-input" type="text">
+					<p class="au-callout">Maximum of 10 student entries reached. You will need to start a new RePL application for other students.</p>
 
-				  </div>
-					<div class="form-section col-md-12">
-						<label for="arn-input">ARN</label>
-						<span id="arn-error" style="color:#d82c52;"></span>
-						<input class="au-text-input" name="text-input" id="arn-input" type="number">
-
-				  </div>
-					<div class=" col-md-12">
-						<button type="button" class="au-btn au-btn--secondary" id="addPilot">
-						<!--<span class="fas fa-user-plus"></span>--> Add Student
-					</button>
-					</div>
-				</section>
 			</div>
 		</div>
 	</div>
@@ -210,7 +293,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 
 <script>
-	$('#arn-check, #save, #warning, #error, .edit-student, .student-details, #finalise-error, #no-arn, #suspension, #existing-arn, #existing-list').hide();
+	$('#arn-check, #save, #warning, #error, .edit-student, #finalise-error, #no-arn, #suspension, #existing-arn').hide();
 	//var arn = document.getElementById("arn-input").value;
 	//var surname = document.getElementById("surname-input").value;
 
@@ -239,7 +322,7 @@
 		if(val1 == "" || val2 == ""){
 		//alert (timesClicked);
 			$('#error').show();
-			$('#save, #finalise-error, .test, #no-arn, #suspension, #existing-arn,#existing-list').hide();
+			$('#save, #finalise-error, .test, #no-arn, #suspension, #existing-arn').hide();
 			document.getElementById("arn-error").textContent="The ARN does not match the Student's detail";
 			document.getElementById("surname-error").textContent="Please check the surname and try again";
 			$("#arn-input, #surname-input").addClass('form-error');
@@ -259,7 +342,7 @@
 				$("#arn-input").val("");
 				$("#surname-input").val("");
 				//alert(surname);
-				$('#error, #arn-error,#surname-error, #finalise-error, .test, #no-arn, #suspension, #existing-arn,#existing-list').hide();
+				$('#error, #arn-error,#surname-error, #finalise-error, .test, #no-arn, #suspension, #existing-arn').hide();
 				$('#save, .student-details').show();
 				$('.grid, #peter').removeClass('hidden');
 				//timesClicked++;
@@ -268,20 +351,16 @@
 				//alert(surname);
 				$("#arn-input").val("");
 				$("#surname-input").val("");
-				$('#error, #arn-error, #surname-error, #finalise-error, .test, #no-arn, #suspension, #existing-arn,#existing-list').hide();
+				$('#error, #arn-error, #surname-error, #finalise-error, .test, #no-arn, #suspension, #existing-arn').hide();
 				$( "#arn-input" ).removeClass('form-error');
 				$( "#surname-input" ).removeClass('form-error');
 				$('#save').show();
 				$('#ava').removeClass('hidden');
 				//timesClicked = 0;
 			}
-			if (!classPeter){
-				$('#error, #arn-error, #surname-error, #finalise-error, .test, #no-arn, #suspension, #existing-arn,#save').hide();
-				$('#existing-list').show();
-			}
 	}
 			if(val1 == "Wilson" || val1 == "wilson"){
-				$('#error, #finalise-error, #existing-arn, #suspension, #surname-error, #arn-error,#existing-list').hide();
+				$('#error, #finalise-error, #existing-arn, #suspension, #surname-error, #arn-error').hide();
 				$('#save').hide();
 				$("#arn-input, #surname-input").removeClass('form-error');
 				$('#no-arn').show();
@@ -295,7 +374,7 @@
 				window.scrollTo(0, 0);
 			}
 			if(val1 == "Johnson" || val1 == "johnson"){
-				$('#error, #no-arn, #finalise-error, #suspension, #surname-error, #arn-error,#existing-list').hide();
+				$('#error, #no-arn, #finalise-error, #suspension, #surname-error, #arn-error').hide();
 				$('#save').hide();
 				$("#arn-input, #surname-input").removeClass('form-error');
 				$('#existing-arn').show();
@@ -307,7 +386,7 @@
 
 		if (classPeter && classAva){
 				$('#finalise-error').show();
-				$('#error, #arn-error, #surname-error, #save, .test, #no-arn, #suspension, #existing-arn,#existing-list').hide();
+				$('#error, #arn-error, #surname-error, #save, .test, #no-arn, #suspension, #existing-arn').hide();
 				document.getElementById("arn-error").textContent="Please enter a ARN";
 				document.getElementById("surname-error").textContent="Please enter a Family name";
 				$("#arn-input, #surname-input").addClass('form-error');
