--- a/04-payment-confirmation.html
+++ b/04-payment-confirmation.html
@@ -84,7 +84,7 @@ img {filter: brightness(0) invert(1);}
 		<div class="row">
 			<div class="col-md-8">
 				<a class="au-btn au-btn--secondary" href="04-payment.html">Back</a>&nbsp;&nbsp;
-				<a class="au-btn au-btn--secondary" href="01-organisation.html#id-progress">Cancel</a>
+				<a class="au-btn au-btn--secondary" href="01-organisation-cancelPayment.html">Cancel</a>
 				<a class="au-btn float-right" href="05-receipt.html">Next</a>
     	</div>
 		</div>
