--- a/02-student.html
+++ b/02-student.html
@@ -64,7 +64,7 @@
 				</div>
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="no-arn">
 					<h3>100 points of identification required</h3>
-					<p>This student has not completed 100 points of identification for their ARN. Call us on 131 757 or contact us via our <a href="https://www.casa.gov.au/aircraft/webform/remotely-piloted-aircraft-operational-enquiries">online enquiry form</a>, for further information.</p>
+					<p>This student has not completed 100 points of identification for their ARN. The student has been notified via email.</p>
 				</div>
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="existing-arn">
 					<h3>Existing RePL with the same category &amp; weight class.</h3>
@@ -72,7 +72,7 @@
 				</div>
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="suspension">
 					<h3>Unable to add student</h3>
-					<p>Call us on 131 757 or contact us via our <a href="https://www.casa.gov.au/aircraft/webform/remotely-piloted-aircraft-operational-enquiries">online enquiry form</a>, for further information.</p>
+					<p>Please advise student to call us on 131 757 or contact us via our <a href="https://www.casa.gov.au/aircraft/webform/remotely-piloted-aircraft-operational-enquiries">online enquiry form</a>, for further information.</p>
 				</div>
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="existing-list">
 					<h3>Student is already on the list</h3>
