--- a/04-payment.html
+++ b/04-payment.html
@@ -112,7 +112,7 @@ img {filter: brightness(0) invert(1);}
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8">
-				<a class="au-btn au-btn--secondary" href="01-organisation.html#id-progress">Cancel</a>
+				<a class="au-btn au-btn--secondary" href="01-organisation-cancelPayment.html">Cancel</a>
 				<a class="au-btn float-right" href="04-payment-confirmation.html">Next</a>
     	</div>
 		</div>
