--- a/02-student.html
+++ b/02-student.html
@@ -224,10 +224,7 @@
 		}
 	});*/
 
-	/*$('input').change(function() {
-		$(this).removeClass('form-error');
-		$(this).parent().find('span').remove();
-	});*/
+
 
 	$('#addPilot').click(function(){
 		//timesClicked = 0;
@@ -304,6 +301,10 @@
 				$('#existing-arn').show();
 				window.scrollTo(0, 0);
 			}
+			if (val1 !== "Johnson" || val1 !== "johnson" || val1 !== "Brown" || val1 !== "brown" || val1 !== "Wilson" || val1 !== "wilson" || val1 !== "Smith" || val1 !== "Williams" || val1 !== "smith" || val1 !== "williams" ){
+				$('#show, #no-arn, #finalise-error, #suspension, #surname-error, #arn-error,#existing-list').hide();
+				$('#error').show();
+			}
 	});
 	$('#finalise').click(function(){
 		var classPeter = $("#peter").hasClass("hidden");
@@ -354,6 +355,11 @@
 		}
 	});
 
+	$('input').change(function() {
+		$(this).removeClass('form-error');
+		$(this).parent().find('span').remove();
+			$('#save, #finalise-error, .test, #no-arn, #suspension, #existing-arn,#existing-list,#error').hide();
+	});
 
 
 </script>
