--- a/02-student.html
+++ b/02-student.html
@@ -301,10 +301,10 @@
 				$('#existing-arn').show();
 				window.scrollTo(0, 0);
 			}
-			if (val1 !== "Johnson" || val1 !== "johnson" || val1 !== "Brown" || val1 !== "brown" || val1 !== "Wilson" || val1 !== "wilson" || val1 !== "Smith" || val1 !== "Williams" || val1 !== "smith" || val1 !== "williams" ){
+			/*if (val1 !== "Johnson" || val1 !== "johnson" || val1 !== "Brown" || val1 !== "brown" || val1 !== "Wilson" || val1 !== "wilson" || val1 !== "Smith" || val1 !== "Williams" || val1 !== "smith" || val1 !== "williams" ){
 				$('#show, #no-arn, #finalise-error, #suspension, #surname-error, #arn-error,#existing-list').hide();
 				$('#error').show();
-			}
+			}*/
 	});
 	$('#finalise').click(function(){
 		var classPeter = $("#peter").hasClass("hidden");
