--- a/00-user-homepage.html
+++ b/00-user-homepage.html
@@ -14,6 +14,7 @@
 
 <body class="live-demo au-body au-grid js">
 	<header class="au-header logo au-body au-body--dark" role="banner">
+		<a class="skip-link" href="#main-content">Skip to content</a>
 	  <div class="container">
 	    <div class="row">
 	      <div class="col-md-9 col-xs-7">
@@ -32,7 +33,7 @@
 			</div>
 		</div>
 	</div>
-<main>
+<main id="main-content">
 	<div class="body">
 		<div class="container">
 			<div class="row">
