--- a/03-paymentsummary.html
+++ b/03-paymentsummary.html
@@ -14,6 +14,7 @@
 
 <body class="live-demo au-body au-grid js">
 	<header class="au-header logo au-body au-body--dark" role="banner">
+  <a class="skip-link" href="#main-content">Skip to content</a>
 	  <div class="container">
 	    <div class="row">
 	      <div class="col-md-9 col-xs-7">
