--- a/02-course-details.html
+++ b/02-course-details.html
@@ -15,6 +15,7 @@
 
 <body class="live-demo au-body au-grid js">
 	<header class="au-header logo au-body au-body--dark" role="banner">
+  <a class="skip-link" href="#main-content">Skip to content</a>
 	  <div class="container">
 	    <div class="row">
 	      <div class="col-md-9 col-xs-7">
@@ -52,9 +53,9 @@
 <main id="main-content">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-6 col-md-12">
+			<div class="col-lg-6 col-md-12"><br>
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="error">
-					<span>Please complete the Remotely Piloted Aircraft details</span>
+					<h3>Please complete the Remotely Piloted Aircraft details</h3>
 				</div>
 					<h2 class="au-display-xl m-t-2">Remote Pilot Licence (RePL)</h2>
 					<a class="au-direction-link au-direction-link--left" href="javascript:history.back()">Back</a>
