--- a/04-payment-decline.html
+++ b/04-payment-decline.html
@@ -20,7 +20,7 @@
 img {filter: brightness(0) invert(1);}
 </style>
 <body class="live-demo au-body au-grid js westpac">
-	<header class="au-header logo" role="banner">
+	<header class="au-header logo au-body au-body--dark" role="banner">
 	  <div class="container">
 	    <div class="row">
 	      <div class="col-md-9 col-xs-7">
