--- a/05-receipt.html
+++ b/05-receipt.html
@@ -13,6 +13,7 @@
 
 <body class="live-demo au-body au-grid js">
 	<header class="au-header logo au-body au-body--dark" role="banner">
+  <a class="skip-link" href="#main-content">Skip to content</a>
 	  <div class="container">
 	    <div class="row">
 	      <div class="col-md-9 col-xs-7">
@@ -75,10 +76,10 @@
 			<div class="col-md-8"><br>
 
 					<div role="alert" class="au-body au-page-alerts au-page-alerts--success">
-  				<h3>Successful</h3>
+  				<h3>Application submitted</h3>
 					<ul>
 						<li>Payment Succeessful</li>
-						<li>RePL Application has been submitted successfully</li>
+						<li>RePL application has been submitted</li>
 						<li>Students on the application have been notified by email</li>
 					<ul>
 				  </div>
