--- a/01-organisation.html
+++ b/01-organisation.html
@@ -132,8 +132,8 @@
 
 				</div>
 				<a href="02-course-details.html" class="au-direction-link" id="link-active">Remote Pilot Licence (RePL)</a>	<p>&nbsp;</p>
-					<a class="au-cta-link" href="submitted-applications.html">Submitted applications</a>
-					<p class="m-t-0 form-text">View all submitted applications</p>
+				<!--	<a class="au-cta-link" href="submitted-applications.html">Submitted applications</a>
+					<p class="m-t-0 form-text">View all submitted applications</p>-->
 			</div>
 
 	</div>
