Additional RPA types added

--- a/02-course-details.html
+++ b/02-course-details.html
@@ -105,9 +105,40 @@
 								<label for="type">RPA Type</label>
 								<select id="type" class="au-select au-select--block">
 									<option value="1" selected="selected">Please select</option>
-									<option value="2">xxxx</option>
-									<option value="3">xxxx</option>
-									<option value="3">xxxx</option>
+									<option value="2">Aerosonde HQ (MTOW up to 44kg)</option>
+									<option value="3">Aerosonde MK4.7 (MTOW up to 36.3kg)</option>
+									<option value="4">Aerosonde MK 47 (MTOW up to 32kg)</option>
+									<option value="5">Aerosonde MK 4X (MTOW up to 35kg)</option>
+									<option value="5">Airbus Zephyr 8 (MTOW up to 75kg)</option>
+									<option value="6">Airship AS10</option>
+									<option value="7">Boeing Insitu RQ-21 Blackjack (MTOW up to 61kg)</option>
+									<option value="8">CyberEye 2 (MTOW up to 80kg)</option>
+									<option value="9">CyberHawk (MTOW up to 30kg)</option>
+									<option value="10">CyberWraith (MTOW up to 30kg)</option>
+									<option value="11">Cybird 5 (MTOW up to 54kg)</option>
+									<option value="12">Elson Space Engineering (MTOW up to 80kg)</option>
+									<option value="13">Grollo Aerospace MLGRAM Evader (MTOW up to 80kg)</option>
+									<option value="14">Grollo Aerospace Pty Ltd Evader (MTOW up to 99kg)</option>
+									<option value="15">Gryphon Dynamics X8 1400 (MTOW up to 40kg)</option>
+									<option value="16">Gryphon X8 (MTOW up to 45kg)</option>
+									<option value="17">HALE 150 - (MTOW up to 150kg)</option>
+									<option value="18">Heliguy Turbine X8 (MTOW up to 40kg)</option>
+									<option value="19">Heliguy Vulcan Super Raven L (MTOW up to 40kg)</option>
+									<option value="20">JAR Aerospace - A-HEX 12 (MTOW up to 100kg)</option>
+									<option value="21">JAR Aerospace - A-HEX 6 (MTOW up to 45kg)</option>
+									<option value="22">JAR Aerospace - A-QUAD 4 (MTOW up to 30kg)</option>
+									<option value="23">JAR Aerospace - A-QUAD 8 (MTOW up to 60kg)</option>
+									<option value="24">Phoenix (MTOW up to 65kg)</option>
+									<option value="25">Shotover U1 (MTOW up to 40kg)</option>
+									<option value="26">Sky Hero Spyder 12 (MTOW up to 34kg)</option>
+									<option value="27">SkyJib X4-XL (Heavy) (MTOW up to 40kg)</option>
+									<option value="28">Sungwoo REMO-8H  (MTOW up to 120kg)</option>
+									<option value="28">UASci Ltd Kestrel (MTOW up to 150kg)</option>
+									<option value="28">U-Drone Robotics AG-10 (MTOW up to 27kg)</option>
+									<option value="28">XM2 Octocopter (MTOW up to 40kg)</option>
+									<option value="28">Yamaha Fazer (MTOW up to 120kg)</option>
+									<option value="28">Yamaha RMAX (MTOW up to 99kg)</option>
+									<option value="28">Yamaha RMAX GII (MTOW up to 99kg)</option>								
 								</select>
 							</div>
 							<p>&nbsp;</p>
